--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -8,7 +8,8 @@
   ],
   "plugins": ["tailwindcss"],
   "rules": {
-    "tailwindcss/no-custom-classname": "off"
+    "tailwindcss/no-custom-classname": "off",
+    "@next/next/no-img-element": "off"
   },
   "settings": {
     "tailwindcss": {
