--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,14 @@
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "csstype": "^3.0.10",
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
